# facemap-napari

./: LICENSE  README.md  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
facemap_napari/_tests/: test_dock_widget.py  test_function.py  test_reader.py  test_writer.py
