[metadata]
name = facemap-napari

author = Atika Syeda
author_email = syeda.atika@ucalgary.ca
license = BSD-3
url = https://github.com/MouseLand/facemap-napari
description = GUI for unsupervised video analysis of rodent behavior (capable of processing multiple camera views)
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/MouseLand/facemap-napari/issues
    Documentation = https://github.com/MouseLand/facemap-napari#README.md
    Source Code = https://github.com/MouseLand/facemap-napari
    User Support = https://github.com/MouseLand/facemap-napari/issues

[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy


[options.entry_points] 
napari.plugin = 
    facemap-napari = facemap_napari
